Gradation circle. add test decode metadata in test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SubscriptionCertificate",
+  "name": "subscription_cert",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
