--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.0",
     "base64-sol": "^1.1.0",
+    "dotenv": "^16.0.1",
     "hardhat": "^2.9.9"
   },
   "devDependencies": {
