--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9"
   },
   "scripts": {
